2015-12-16  Mickael Guene <mickael.guene@st.com>

	* bfd-in2.h: Regenerate.
	* reloc.c: Add new relocations.
	* libbfd.h (bfd_reloc_code_real_names): Add new relocations
	display names.
	* elf32-arm.c (elf32_arm_howto_table_1): Add HOWTO for new
	relocations.
	(elf32_arm_reloc_map): Add bfd/arm mapping for new relocations.
	(elf32_arm_final_link_relocate): Implement new relocations
	resolution.

2015-12-15  Jan Beulich  <jbeulich@suse.com>

	* coffgen.c (coff_write_alien_symbol): New parameter "iaux".
	(coff_write_symbols): Pass NULL for new argument.
	* cofflink.c (_bfd_coff_final_link): New local variables
	"iaux".
	Extend scope of local variables "indx" and "hash". Pass address
	of "iaux" to coff_write_alien_symbol(). Handle ".file" and the
	file name ending up in the string table separately. Avoid
	setting "rewrite" on more than one path.
	* libcoff-in.h (coff_write_alien_symbol): New parameter of type
	"union internal_auxent *".
	* libcoff.h: Re-generate.

2015-12-15  Nick Clifton  <nickc@redhat.com>

	PR 19339
	* elf-vxworks.h: Update copyright notice.
	* elf-vxworks.c: Update copyright notice.
	* elf-nacl.h: Update copyright notice.
	* elf-nacl.c: Update copyright notice.

2015-12-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/19317
	* linker.c (_bfd_generic_link_add_one_symbol): Don't complain
	plugin needed to handle slim lto object for relocatable link.

2015-12-09  Sandra Loosemore  <sandra@codesourcery.com>

	* elf32-nios2.c (nios2_elf32_finish_dynamic_sections): Correct
	%hiadj/%lo computations for _GLOBAL_OFFSET_TABLE_ in initial
	PLT entries.  Assert alignment requirements.

2015-12-08  DJ Delorie  <dj@redhat.com>

	* elf32-rl78.c (rl78_offset_for_reloc): Add more relocs.
	(rl78_elf_relax_section): Add bc/bz/bnc/bnz/bh/bnh.  Fix reloc
	choices.

	* elf32-rx.c (rx_elf_object_p): Ignore empty and nobits sections.

2015-12-07  Nick Clifton  <nickc@redhat.com>

	* elf32-rx.c (elf32_rx_relax_delete_bytes): Add extra parameter -